2020-10-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve handling of additional fields, resolves #69

2020-09-30 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Move general configuration to own "space" in the TCA, resolves #140

2020-09-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Enforce strict Scheduler dependency, resolves #129

2020-09-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.3.3

2020-09-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Exclude resources from packaging (thanks to Mathias Brodala)
	* Use immutable date in log entries (thanks Christoph Lehmann)
	* Prevent SQL errors when no slugs need to be updated (thanks Christoph Lehmann)

2020-08-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.3.2

2020-06-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix failing validation in case of multiple custom steps, resolves #128

2020-05-11 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 v10, resolves #108
	* Allow SQL functions in valueField and referenceField properties, resolves #114
	* Use TYPO3 random functions for generating temporary keys, resolves #123
	* Rotate icon while synchronization is running, resolves #124
	* Release version 4.3.0 and 4.3.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix display of connector property error, resolves #122
	* Use new API to report about connector configuration errors, resolves #75
	* Actually use the custom step validation, resolves #121

2020-05-01 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Do not log the execution time limit change (logger not available), resolves #119
	* Fix syntax error in documentation code sample, resolves #118
	* Release version 4.2.3

2020-04-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Make add task button visible again independently of task groups, resolves #117
	* Update documentation settings
	* Release version 4.2.2
